--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@kolkov/ngx-gallery": "^1.2.3",
     "angular-bootstrap-md": "10.0.0",
+    "angular-favicon": "^1.0.4",
     "chart.js": "^2.5.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
