--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "chart.js": "^2.5.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "pdfjs-dist": "^2.6.347",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.2.0",
     "rxjs": "~6.5.4",
+    "simple-pdf-viewer": "^2.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -54,6 +58,16 @@
   },
   "license": "MIT",
   "styles": [
-    "../node_modules/font-awesome/css/font-awesome.css"
-  ]
+    "../node_modules/font-awesome/css/font-awesome.css",
+    "../node_modules/primeng/resources/themes/saga-blue/theme.css",
+    "../node_modules/primeng/resources/primeng.min.css",
+    "../node_modules/primeicons/primeicons.css"
+  ],
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "stream": false,
+    "zlib": false
+  }
 }
