--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "hammerjs": "^2.0.8",
     "pdfjs-dist": "^2.6.347",
     "primeicons": "^4.1.0",
-    "primeng": "^11.2.0",
+    "primeng": "^11.2.3",
     "rxjs": "~6.5.4",
     "simple-pdf-viewer": "^2.0.3",
     "tslib": "^2.0.0",
@@ -61,7 +61,8 @@
     "../node_modules/font-awesome/css/font-awesome.css",
     "../node_modules/primeng/resources/themes/saga-blue/theme.css",
     "../node_modules/primeng/resources/primeng.min.css",
-    "../node_modules/primeicons/primeicons.css"
+    "../node_modules/primeicons/primeicons.css",
+    "../node_modules/primeng/resources/themes/saga-blue/theme.css"
   ],
   "browser": {
     "fs": false,
