--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "@kolkov/ngx-gallery": "^1.2.3",
     "angular-bootstrap-md": "10.0.0",
     "angular-favicon": "^1.0.4",
+    "brfs": "^2.0.2",
+    "browserify-fs": "^1.0.0",
+    "buffer": "^6.0.3",
     "chart.js": "^2.5.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "pdfjs-dist": "^2.6.347",
     "primeicons": "^4.1.0",
     "primeng": "^11.2.3",
+    "process": "^0.11.10",
+    "readdir": "^1.0.2",
     "rxjs": "~6.5.4",
     "simple-pdf-viewer": "^2.0.3",
     "tslib": "^2.0.0",
@@ -42,7 +47,7 @@
     "@angular/language-service": "~10.1.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -70,5 +75,8 @@
     "os": false,
     "stream": false,
     "zlib": false
-  }
+  },
+  "typeRoots": [
+    "./node_modules/@types"
+  ]
 }
